# Process this file with autoconf to produce a configure script.
AC_INIT(upwatch, 0.1, bugs@upwatch.com)
AC_CONFIG_SRCDIR([upwatch/spool.c])

AM_INIT_AUTOMAKE(upwatch, 0.1)
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_AWK
AC_PROG_RANLIB
AC_PROG_LN_S

################## MYSQL
# path to libmysqlclient stuff:.
AC_ARG_WITH(mysql-libs,
    [ --with-mysql-libs=<path> prefix of MySQL libraries. Default /usr/lib/mysql],
    [MYSQL_LIB_PREFIX=$with_mysql_libs],
    [MYSQL_LIB_PREFIX=/usr/lib/mysql]
)

# path to mysql includes
AC_ARG_WITH(mysql-include,
    [ --with-mysql-include=<path> prefix of MySQL headers. Default /usr/include/mysql],
    [MYSQL_INC_PREFIX=$with_mysql_include],
    [MYSQL_INC_PREFIX=/usr/include/mysql]
)

AC_SUBST(MYSQL_LIB_PREFIX)
AC_SUBST(MYSQL_INC_PREFIX)
MYSQL_LIBS="-L${MYSQL_LIB_PREFIX} -lmysqlclient"
MYSQL_CFLAGS="-I${MYSQL_INC_PREFIX}"
AC_SUBST(MYSQL_LIBS)
AC_SUBST(MYSQL_CFLAGS)

CFLAGS="$CFLAGS $MYSQL_CFLAGS"
LIBS="$LIBS $MYSQL_LIBS"

################## PCAP
# path to pcap:
AC_ARG_WITH(pcap-libs,
    [ --with-pcap-libs=<path> prefix of pcap libraries. Default /usr/lib],
    [PCAP_LIB_PREFIX=$with_pcap_libs],
    [PCAP_LIB_PREFIX=/usr/lib]
)

# path to pcap includes
AC_ARG_WITH(pcap-include,
    [ --with-pcap-include=<path> prefix of pcap headers. Default /usr/include/pcap],
    [PCAP_INC_PREFIX=$with_pcap_include],
    [PCAP_INC_PREFIX=/usr/include/pcap]
)

AC_SUBST(PCAP_LIB_PREFIX)
AC_SUBST(PCAP_INC_PREFIX)
PCAP_LIBS="-L${PCAP_LIB_PREFIX} -lpcap"
PCAP_CFLAGS="-I${PCAP_INC_PREFIX}"
AC_SUBST(PCAP_LIBS)
AC_SUBST(PCAP_CFLAGS)

CFLAGS="$CFLAGS $PCAP_CFLAGS"
LIBS="$LIBS $PCAP_LIBS"

################## LIBNET
# libnet
LIBNET_CFLAGS="`libnet-config --cflags`"
LIBNET_CFLAGS="$LIBNET_CFLAGS `libnet-config --defines`"
LIBNET_LIBS="`libnet-config --libs`"
AC_SUBST(LIBNET_CFLAGS)
AC_SUBST(LIBNET_LIBS)
CFLAGS="$CFLAGS $LIBNET_CFLAGS"
LIBS="$LIBS $LIBNET_LIBS"

################## GLIB2
# glib2 
LIBGLIB2_CFLAGS="-D_REENTRANT `pkg-config --cflags glib-2.0`"
LIBGLIB2_LIBS="`pkg-config --libs gthread-2.0`"
AC_SUBST(LIBGLIB2_CFLAGS)
AC_SUBST(LIBGLIB2_LIBS)
CFLAGS="$CFLAGS $LIBGLIB2_CFLAGS"
LIBS="$LIBS $LIBGLIB2_LIBS"

################## GNET
# gnet
LIBGNET_CFLAGS="`gnet-config --cflags`"
LIBGNET_LIBS="`gnet-config --libs`"
AC_SUBST(LIBGNET_CFLAGS)
AC_SUBST(LIBGNET_LIBS)
CFLAGS="$CFLAGS $LIBGNET_CFLAGS"
LIBS="$LIBS $LIBGNET_LIBS"

# Checks for other libraries.
AC_CHECK_LIB([opts], [optionLoadLine])
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([curl], [curl_easy_init])
AC_CHECK_LIB([pcap], [pcap_close])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h malloc.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([alarm atexit gethostbyname gethostname gettimeofday inet_ntoa memset putenv select socket strdup strerror strncasecmp strrchr strstr tzset])

AM_CONFIG_HEADER(config.h)

AC_CONFIG_FILES([Makefile
                 upwatch/Makefile 
                 uw_accept/Makefile 
                 uw_httpget/Makefile 
                 uw_ping/Makefile 
                 uw_process/Makefile 
                 uw_traceroute/Makefile 
                 uw_send/Makefile]
)
AC_OUTPUT

